# msx-camera

./: .gitignore  README.md
camera-rpi/src/py/: adjustment.py  capture.py  cartonify.py  color_transform.py  dither.py  main.py  mainwindow.kv  msxcolor.py  test-cam.py  test_cam.py
components/core/: dither.py  msxcolor.py  tms99x8_bw_dither.py
components/jupyter/: pyproject.toml
components/kivy/: main.py  mainwindow.kv  pyproject.toml
device/py/: mainwindow.kv  nb_segment.ipynb  nb_tms99x8_wb_dither.ipynb  pyproject.toml  test_cam.py
device/py/lib/: adjustment.py  color_transform.py  dither.py  msxcolor.py  tms99x8.py  tms99x8_bw_dither.py
device/src/py/: main.py  nb_msx_screen2_digitizer.ipynb  nb_segment.ipynb  test-cam.py  test_cam.py
device/src/py/lib/: color_transform.py  msxcolor.py
