[tool.poetry]
name = "msx-digitizer-jupyter"
version = "0.1.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <info@gilbertfrancois.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
opencv-python-headless = "^4.6.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
jupyterlab = "^3.4.4"
ipympl = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
