[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <info@gilbertfrancois.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"
Cython = "^0.29.30"
numpy = "^1.23.0"
opencv-python = "^4.6.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.3"
ipympl = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
